# exogenesis-ensemble-part-three-redemption

./: README.md
.github/workflows/: deploy-document.yml  rust-format.yml  test-build.yml  test-code-quality.yml  test.yml
app/: bun.lockb  package.json  tailwind.config.js  typedoc.json
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: errors.rs  handlers.rs  lib.rs  local_file.rs  main.rs  stores.rs
app/src-tauri/src/errors/: mod.rs
app/src-tauri/src/handlers/: mod.rs  select_file.rs
app/src-tauri/src/local_file/: file_handling.rs  local_file_dir.rs  local_file_error.rs  mod.rs  util.rs
app/src-tauri/src/stores/: date.rs  store.rs
app/src-tauri/test-data/video/: IMG_0282.MOV
app/src/src/constant/: links.ts
app/src/src/context/: ModeContext.tsx
app/src/src/layout/: Layout.tsx
crate/time-file/doc/: help.html  settings.html
crate/time-file/doc/time_file_name/: fn.from_file_name_to_date_time.html  index.html  struct.FilePath.html  (+1 more)
crate/time_file_name/: Cargo.toml
crate/time_file_name/src/: lib.rs
crates/aws-clients/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
crates/aws_clients/: Cargo.toml  docker-compose.yaml
crates/aws_clients/src/: dynamodb.rs  environment_values.rs  lib.rs  s3.rs
crates/aws_clients/src/dynamodb/: client.rs  entities.rs  environment_values.rs  mod.rs  test_util.rs
crates/aws_clients/src/dynamodb/test_util/: mod.rs
crates/aws_clients/src/environment_values/: mod.rs
crates/aws_clients/src/s3/: client.rs  enviironment_value.rs  environment_value.rs  mod.rs  test_utils.rs
crates/aws_clients/src/shared/: mod.rs
crates/aws_clients/storage/ready.d/: s3.sh
crates/aws_clients/storage/scripts/ready.d/: s3.sh
crates/shared/: Cargo.toml
crates/shared/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
crates/shared/src/: lib.rs
crates/time-file/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
crates/time_file_name/src/: file_datetime.rs  file_path.rs  lib.rs
docs/others/: backend-api.yaml  index.html
docs/project/: babel.config.js  biome.json  bun.lockb  docusaurus.config.ts  package.json
docs/project/docs/: about.md
docs/top-page/: README.md  astro.config.mjs  bun.lockb  package.json
infra/: biome.json  bun.lockb  package-lock.json  package.json
infra/lib/: exogenesis-ensemble-stack.ts
infra/test/: infra.test.ts
infra/util/: types.ts
lambda/s3-hook/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
lambda/web-api/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
lambdas/s3-hook-app/: Cargo.toml
lambdas/s3-hook-app/src/: main.rs
lambdas/web-api-app/: Cargo.toml  docker-compose.yaml
lambdas/web-api-app/mock-data/dockerfile/: Dockerfile
lambdas/web-api-app/src/: error.rs  lib.rs  main.rs
lambdas/web-api-app/src/bucket/: mod.rs
lambdas/web-api-app/src/environment_values/: mod.rs
lambdas/web-api-app/src/routes/: db.rs  mod.rs  return_types.rs
lambdas/web-api-app/src/routes/bucket/: bucket_function.rs  mod.rs  route.rs
lambdas/web-api-app/src/routes/db/: db_function.rs  routes.rs
lambdas/web-api-app/src/static_values/: mod.rs
native/api/front-end/: index.html
project/: 404.html  index.html  sitemap.xml
project/assets/css/: styles.443cba11.css
project/assets/js/: 14eb3368.a6814f28.js  17896441.25bdc4c3.js  1df93b7f.8570aecc.js  1f391b9e.963dc7b9.js  237.52e58630.js  3316ef54.be18b3ae.js  393be207.f9f5acc4.js  3d8d21df.def58a28.js  408.d2898dd6.js  4fc8ccc7.015256ec.js  4fc8ccc7.3c5bf39b.js  4fc8ccc7.5a0ae977.js  4fc8ccc7.a491819c.js  4fc8ccc7.c140c1ec.js  4fc8ccc7.c475a036.js  5e95c892.1ca7e63f.js  82817536.81cb93fe.js  82817536.b2550e42.js  82817536.b3cb396d.js  96624fae.28eee32e.js  96624fae.a82bf87d.js  a7456010.a88f6dde.js  a7bd4aaa.2f8542b0.js  a94703ab.9af5e339.js  aba21aa0.bfc3cfec.js  c9eb3e1b.4930ce34.js  main.8478cac5.js  main.af3b692a.js  main.bcee55f2.js  main.f5f263e3.js  runtime~main.2dceb065.js  runtime~main.3a207423.js  runtime~main.56b94aaa.js  runtime~main.82869c35.js  runtime~main.86463e3e.js  runtime~main.914fd072.js  runtime~main.c2249c12.js
project/docs/about/: index.html
project/markdown-page/: index.html
top-page/: index.html
web-api/: index.html
(+423 files in other folders)
