[package]
name = "aws_clients"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {  version =  "1.42.0", features = ["sync", "macros"] }
aws-sdk-s3 = { version = "1.67.0", features = ["behavior-version-latest"], optional = true }
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
time_file_name = { path = "../time_file_name" }
shared = { path = "../shared" }
aws-sdk-dynamodb = { version ="1.54.0" , optional = true }
mockall = "0.13.1"
log = "0.4.22"

[dev-dependencies]
futures = "0.3.31"

[features]
db = ["aws-sdk-dynamodb"]
standard-storage = ["aws-sdk-s3"]
mock = ["db", "standard-storage"]