[package]
name = "web-api-app"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"

axum = "0.7.9"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros"] }

aws_clients = { path = "../../crates/aws_clients", features = ["standard-storage", "db"] }
shared = { path = "../../crates/shared" }
thiserror = "2.0.3"
